# naatai

./: .gitignore  README.md  SETUP.md  config.example.json  demo.html  docker-compose.yml  index.html  package.json  pyproject.toml  requirements.txt  run.py  tailwind.config.ts
app/: layout.tsx  page.tsx
backend/: .env  .env.example  Dockerfile  requirements.txt
components/: MeshViewer.tsx
css/: style.css
custom-design/: configurator.css  configurator.js  index.html
docs/: chart.html  data.json  footprint.html  index.html  signals.html  signals.json  unirenko.html
indicators/: README.md  README_UltimateCryptoSignals.md  TRADING_GUIDE.md  UltimateCryptoSignals.mq4  naatai_bb_trigger.pine  naatai_heikin_ashi_panel.pine  naatai_orderflow_candles.pine
js/: configurator.js  main.js
lib/: api.ts
lookbook/: index.html  lookbook.css
man-collection/: index.html
man-custom-design/: index.html
men/: index.html
mobile/: .env.local  app.json  package-lock.json  package.json
naatai/: __init__.py  alerts.py  backtest.py  cli.py  config.py  datafeed.py  engine.py  indicators.py  signals.py  strategy.py
product/: index.html  product.css  product.js
scripts/: README_naatai_live.md  naatai_bot.py  naatai_colab.py  naatai_live.py  naatai_server.py  naatai_trader.py  scan.py
tests/: test_indicators.py  test_pipeline.py  test_strategy.py
tradingview/: 1_HeikenAshi.pine  2_PCTrendA.pine  3_BB_Trigger.pine  4_Naatai_Combo.pine  5_Naatai_Master.pine  README.md  UltimateCryptoFutures_Pro.pine
woman-collection/: index.html
women/: collection.css  collection.js  (+1 more)
(+90 files in other folders)
